# swig2pyi

./: -.xml  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  README.md  STATUS.md  debug_output.xml  implementation_plan.md  index.html  mkdocs.yaml  objects.inv  poe_tasks.toml  probe_swig.py  pyproject.toml  pyrightconfig.json  repro_handle.py  requirements.txt  ruff.toml  run_full_test.py  sitemap.xml  skills-lock.json  tach.toml  temp_file_lister.py
.agents/rules/: rules.md  tests.md
.agents/skills/caveman-compress/scripts/: benchmark.py  cli.py  compress.py  detect.py  validate.py
.agents/skills/karpathy-coder/expected_outputs/: assumption_linter.json  complexity_checker.json  diff_surgeon.json  goal_verifier.json
.agents/skills/skill-creator/scripts/: improve_description.py  quick_validate.py
.agents/skills/task-scheduler/: SKILL.md
.agents/skills/thermonuclear/: SKILL.md
.antigravitycli/: 57cfcb8f-9b6c-4f27-8942-45cf0f965c59.json
.github/: dependabot.yml
.github/workflows/: docs.yaml  pypi.yaml  python_tests.yaml
.project/: achievements.md  design.md  goals.md  plan.md
api-reference/: index.html
architecture/: index.html
changelog/: index.html
cli-reference/: index.html
configuration/: index.html
docs/: GUIDELINES.md  achievements.md  api-reference.md  architectural_review.md  architecture.md  changelog.md  cli-reference.md  configuration.md  current_state.md  dependency_graph.mmd  index.md  plan.md  report.md  status.md  testing_strategy.md
search/: search_index.json
src/swig2pyi/: __init__.py  api.py  cli.py  main.py
src/swig2pyi/core/: __init__.py  ast_models.py  builder.py  config.py  emitter.py  filter.py  ingestion.py  naming.py  parser.py  preamble.i  qa.py  runner.py  schema.py  signature.py  type_system.py
src/swig2pyi/mocks/: __init__.py  boost_shared_ptr.i  std_common.i  std_complex.i  std_map.i  std_pair.i  std_string.i  std_vector.i  stl.i
src/swig2pyi/mocks/std/: std_vector.i
src/swig2pyi/rules/: __init__.py  gdal_osr.json  quantlib.json
src/swig_pyi/: __init__.py  _cli.py  generator.py  models.py  parser.py
tests/: __init__.py  simple.py  simple_wrap.cxx  simple_wrap.xml  test_cli.py  test_coverage_increase.py  test_docstrings.py  test_emitter.py  test_generator.py  test_handle_inheritance.py  test_import_tracking.py  test_integration_handle_overloads.py  test_integration_operators.py  test_integration_osr.py  test_integration_osr_static.py  test_integration_quantlib.py  test_integration_quantlib_full.py  test_integration_quantlib_mini.py  test_integration_quantlib_versions.py  test_integration_synthetic.py  test_integration_vectors.py  test_parser.py  test_parser_ast.py  test_parser_enum.py  test_parser_features.py  test_parser_stream.py  test_schema.py  test_static_verification.py  test_swig_sections.py  test_type_manager.py
tests/data/osr/: osr.py  osr.xml
tests/data/quantlib-1.37/: QuantLib.py  barrieroptions.i  common.i  currencies.i  date.i  forwardcurve.i  gaussian1dmodel.i  inflation.i  interestrate.i  interpolation.i  lmm.i  ode.i  optimizers.i  options.i  ql.i  ratehelpers.i  swap.i  termstructures.i
tests/data/quantlib-1.38/: QuantLib.py  calendars.i  common.i  currencies.i  exchangerates.i  fdm.i  fra.i  inflation.i  instruments.i  integrals.i  localvolatilities.i  old_volatility.i  options.i  ql.i  ratehelpers.i  slv.i  statistics.i  swap.i  swaption.i  termstructures.i  volatilities.i
tests/data/quantlib-1.39/: QuantLib.py  barrieroptions.i  blackformula.i  calendars.i  capfloor.i  cashflows.i  functions.i  inflation.i  linearalgebra.i  ode.i  old_volatility.i  parameter.i  ql.i  randomnumbers.i  ratehelpers.i  shortratemodels.i  stochasticprocess.i  swap.i  swaption.i  tracing.i  volatilities.i
tests/data/quantlib-1.40/: QuantLib.py  blackformula.i  capfloor.i  cashflows.i  common.i  date.i  fdm.i  inflation.i  instruments.i  interpolation.i  linearalgebra.i  options.i  ql.i  ql_mini.i  quantlib_full.i  quantlib_mini.i  quantlib_mini.pyi  randomnumbers.i  ratehelpers.i  statistics.i  swap.i  swaption.i  termstructures.i  tracing.i  volatilities.i
tests/data/quantlib-1.41/: QuantLib.py  barrieroptions.i  cashflows.i  common.i  currencies.i  functions.i  inflation.i  old_volatility.i  parameter.i  ql.i  ratehelpers.i  stochasticprocess.i  swap.i  swaption.i  termstructures.i  volatilities.i
tests/data/quantlib-1.42/: QuantLib.py  cashflows.i  common.i  exchangerates.i  fdm.i  fra.i  functions.i  gaussian1dmodel.i  interpolation.i  linearalgebra.i  localvolatilities.i  ratehelpers.i  shortratemodels.i  swaption.i  termstructures.i  volatilities.i
tests/data/quantlib-1.42.1/: calendars.i  inflation.i  integrals.i  interestrate.i  lmm.i  ode.i  optimizers.i  options.i  ql.i  slv.i  swap.i
tests/data/synthetic/: handle_overloads.i  handle_overloads.json  operators.i  operators.json  synthetic.i  synthetic.json  vector_typedefs.i  vector_typedefs.json
tests/expected_output/: bond.pyi  quantlib_full.pyi  quantlib_mini.pyi  yieldtermstructure.pyi
tests/expected_output/QuantLib/: __init__.pyi
tests/integration/: helpers.py  simple.i  test_handle_overloads.py  test_operators.py  test_osr.py  test_osr_static.py  test_swig_sections.py  test_synthetic.py  test_vectors.py
tests/quantlib_tests/: american_option.py  basket_option.py  bermudan_swaption.py  bonds.py  european_option.py  short_rate_model.py  swap.py  term_structure.py  test_basic.py  test_integration_quantlib_full.py  test_integration_quantlib_mini.py  test_integration_quantlib_versions.py  test_static_verification.py
tests/unit/: test_cli.py  test_coverage_increase.py  test_filter.py  test_handle_inheritance.py  test_import_tracking.py  test_parser.py  test_parser_enum.py  test_type_manager.py
