[project]
    authors = [
        { name = "bwrob", email = "bartosz.marcin.wroblewski@gmail.com" },
    ]
    classifiers = [
        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]
    dependencies = [
        "pydantic>=2.10.0",
        "sqlmodel>=0.0.16",
        "swig>=4.3.0",
    ]
    description = "Generate Python typing stubs from SWIG interface files."
    license = 'MIT'
    license-files = ['LICENSE']
    name = "swig2pyi"
    readme = "README.md"
    requires-python = ">=3.12,<3.15"
    version = "0.1.0"

    [project.urls]
        Changelog     = "https://bwrob.github.io/swig2pyi/changelog/"
        Documentation = "https://bwrob.github.io/swig2pyi/"
        Homepage      = "https://bwrob.github.io/swig2pyi/"
        Source        = "https://github.com/bwrob/swig2pyi/"

    [project.scripts]
        "swig2pyi" = "swig2pyi.main:main"


[dependency-groups]

    dev = [
        "basedpyright>=1.31.2",
        "complexipy>=5.4.1",
        "coverage>=7.10.4",
        "diff-cover>=9.6.0",
        "poethepoet>=0.37.0",
        "pre-commit>=3.7.1",
        "pytest>=8.4.1",
        "pytest-cov>=6.2.1",
        "quantlib==1.40",
        "ruff>=0.12.9",
        "tach>=0.29.0",
    ]
    docs = [
        "mkdocs>=1.6.1",
        "mkdocs-git-authors-plugin>=0.10.0",
        "mkdocs-git-committers-plugin-2>=2.5.0",
        "mkdocs-git-revision-date-localized-plugin>=1.4.7",
        "mkdocs-material>=9.6.17",
        "mkdocs-typer2>=0.1.5",
        "mkdocstrings-python>=1.17.0",
        "pymdown-extensions>=10.16.1",
    ]


[tool.uv]
    package          = true
    required-version = ">=0.8.0"

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["examples", "tests/expected_output", ".agents"]

[tool.ruff.lint]
ignore = ["COM", "D203", "D211", "D213"]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N", "S101", "D", "INP001", "E501", "PTH", "PLR2004"]

[tool.ruff.format]
docstring-code-format = true
