[project]
    authors = [
        { name = "bwrob", email = "bartosz.marcin.wroblewski@gmail.com" },
    ]
    classifiers = [
        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]
    dependencies = [
        "pydantic>=2.10.0",
        "swig>=4.3.0",
        "typer>=0.12.0",
    ]
    description = "Generate Python typing stubs from SWIG interface files."
    license = 'MIT'
    license-files = ['LICENSE']
    name = "swig2pyi"
    readme = "README.md"
    requires-python = ">=3.10,<3.15"
    version = "0.1.0"

    [project.urls]
        Changelog     = "https://bwrob.github.io/swig2pyi/changelog/"
        Documentation = "https://bwrob.github.io/swig2pyi/"
        Homepage      = "https://bwrob.github.io/swig2pyi/"
        Source        = "https://github.com/bwrob/swig2pyi/"

    [project.scripts]
        "swig2pyi" = "swig2pyi.main:main"


[dependency-groups]

    dev = [
        "basedpyright>=1.39.9",
        "complexipy>=5.4.1",
        "coverage>=7.10.4",
        "diff-cover>=9.6.0",
        "pandas",
        "poethepoet>=0.37.0",
        "pre-commit>=3.7.1",
        "pytest>=8.4.1",
        "pytest-cov>=6.2.1",
        "quantlib==1.40",
        "ruff>=0.12.9",
        "tach>=0.29.0",
    ]
    docs = [
        "mkdocs>=1.6.1",
        "mkdocs-git-authors-plugin>=0.10.0",
        "mkdocs-git-committers-plugin-2>=2.5.0",
        "mkdocs-git-revision-date-localized-plugin>=1.4.7",
        "mkdocs-material>=9.6.17",
        "mkdocs-typer2>=0.1.5",
        "mkdocstrings-python>=1.17.0",
        "pymdown-extensions>=10.16.1",
    ]


[tool.uv]
    package          = true
    required-version = ">=0.8.0"

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["examples", "tests/expected_output", "tests/data", ".agents", ".temp", "tests/quantlib_tests"]

[tool.ruff.lint]
ignore = ["COM", "D203", "D211", "D213"]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"src/swig2pyi/cli.py" = ["T201", "B008", "PLR0913", "BLE001", "PLW2901", "ANN"]
"tests/**" = ["N", "S101", "S603", "D", "INP001", "E501", "PTH", "PLR2004", "SLF001", "PLC0415", "ANN", "ARG", "PLR0915"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
addopts = "--ignore=tests/quantlib_tests --ignore=tests/data"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"swig2pyi.rules" = ["*.json"]

[tool.poe.tasks]
complexity       = { cmd = "complexipy --max-complexity-allowed 10 src", help = "Check code complexity using complexipy." }
coverage         = { cmd = "pytest --doctest-modules --verbose --cov --cov-report=xml", help = "Create test coverage report." }
dependencies     = { cmd = "tach check", help = "Check dependency layers using tach." }
dependency-graph = { cmd = "tach show --mermaid -o docs/dependency_graph.mmd", help = "Generate the dependency graph." }
docs             = { cmd = "hap run mkdocs serve", help = "Spawn docs server." }
format           = { cmd = "ruff format --diff", help = "Check code formatting using ruff." }
install-hooks    = { cmd = "uv run pre-commit install", help = "Install pre-commit hooks." }
lint             = { cmd = "uv run ruff check", help = "Check code rules using ruff." }
precommit        = { cmd = "uv run pre-commit run --all-files", help = "Run all code quality checks." }
publish-docs     = { cmd = "mkdocs gh-deploy --force", help = "Publish the docs to GitHub Pages." }
test             = { cmd = "pytest", help = "Run lightweight unit and synthetic tests." }
test-heavy       = { cmd = "pytest -o addopts=\"\" tests/quantlib_tests", help = "Run heavy integration tests including QuantLib." }
type-check       = { cmd = "basedpyright --project pyrightconfig.json src tests", help = "Check static typing using basedpyright." }

[tool.poe.tasks.code-quality]
help = "Run all code quality checks."
ignore_fail = "return_non_zero"
sequence = [
    "fix",
    "precommit",
    "format",
    "lint",
    "type-check",
    "complexity",
]

[tool.poe.tasks.fix]
default_item_type = "cmd"
help = "Code quality fixes using ruff."
ignore_fail = "return_non_zero"
sequence = [
    "ruff check --fix --unsafe-fixes",
    "ruff format",
]

[tool.poe.tasks.publish]
sequence = [
    "code-quality",
    { cmd = "rm -rf dist" },
    { cmd = "uv build" },
    { cmd = "uv publish" },
    "publish-docs",
]

[tool.poe.tasks.setup]
help     = "Set up the development environment."
sequence = ["install-hooks"]
